--- a/css/news.css
+++ b/css/news.css
@@ -1,14 +1,18 @@
-
-*,*::before,*::after{
+*,
+*::before,
+*::after {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
 }
-html, body{
+
+html,
+body {
     overflow-x: hidden;
 }
-.banner{
-    background: linear-gradient(rgba(255, 255, 255, 0.5),rgba(255, 255, 255, 0.5) ), url(../img/newsbanner.png);
+
+.banner {
+    background: linear-gradient(rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 0.5)), url(../img/newsbanner.png);
     background-size: cover;
     background-position: center;
     height: 30vh;
@@ -18,17 +22,18 @@ html, body{
     flex-direction: column;
     justify-content: center;
     align-items: baseline;
- display: none;       
+    display: none;
 }
 
-@media (min-width: 768px){
+@media (min-width: 768px) {
 
-  .banner{
-display: flex;
-      
-  }  
+    .banner {
+        display: flex;
+
+    }
 }
-.banner::after{
+
+.banner::after {
     content: "";
     display: flex;
     position: relative;
@@ -36,143 +41,169 @@ display: flex;
     align-items: flex-end;
     width: 100%;
     height: 5px;
-    
-    background:linear-gradient(45deg, #BFD2F8,  #1F2B6C);
+
+    background: linear-gradient(45deg, #BFD2F8, #1F2B6C);
 }
 
-img{
+img {
     width: 100%;
     display: block;
 }
 
-.banner div{
+.banner div {
     color: #1F2B6C;
-    
+
     margin-left: 10%;
 }
-p{
+
+p {
     margin-bottom: 0;
 }
 
-.container-section{
+.container-section {
     max-width: 1120px;
     width: 92%;
     margin: 0 auto;
     padding: 1.5rem .2rem;
-    
-    
+
+
 }
-.blog-side{
+
+.blog-side {
     display: none;
 }
-@media (min-width: 768px){
-    .container-section{
+
+@media (min-width: 768px) {
+    .container-section {
         display: grid;
-        grid-template-columns:  60vw 35vw;
+        grid-template-columns: 60vw 35vw;
         grid-column-gap: 2vw;
     }
-    .blog-side{
+
+    .blog-side {
         display: flex;
         flex-direction: column;
     }
 }
-.blog-icons{
+
+.blog-icons {
     display: flex;
     width: 100%;
     justify-content: space-between;
     align-items: center;
 }
-@media ( min-width: 768px ){
-    .blog-icons{
 
-        width: 75%;  
-        
+@media (min-width: 768px) {
+    .flex {
+        display: flex;
+        align-items: center;
     }
-   
-}
-@media (min-width : 990px){
-    .blog-icons{
 
-        width: 80%;  
-        
-    } 
+    .icon {
+        width: 80%;
+    }
+
+    .blog-icons {
+
+        width: 75%;
+
+    }
+
 }
-.blog-icons p{
+
+@media (min-width : 990px) {
+    .blog-icons {
+
+        width: 80%;
+
+    }
+}
+
+.blog-icons p {
     font-size: 10px;
 }
 
-@media (min-width: 768px){
-    .blog-icons p{
+@media (min-width: 768px) {
+    .blog-icons p {
         font-size: 12px;
     }
 }
 
-@media (min-width: 990px){
-    .blog-icons p{
+@media (min-width: 990px) {
+    .blog-icons p {
         font-size: 16px;
     }
 }
-.blog-icons div{
+
+.blog-icons div {
     display: flex;
     align-items: center;
     padding-right: .1rem;
 }
-.icon{
-    margin-right:3px ;
+
+.icon {
+    margin-right: 3px;
 }
-.blog-img{
+
+.blog-img {
     margin: .6rem 0;
 }
-@media (min-width: 768px){
-   
-    .icon{
-        margin-right:5px ;
+
+@media (min-width: 768px) {
+
+    .icon {
+        margin-right: 5px;
     }
 }
 
 
-.blog-post{
+.blog-post {
     margin: 2rem 0;
-    
+
 }
-h4{
+
+h4 {
     margin: 1rem 0;
 }
-.arrow{
+
+.arrow {
     width: 19%;
 }
-.btn{
-    
+
+.btn {
+
     justify-content: space-between;
     display: flex;
     width: 38%;
     align-items: center;
     border-radius: 25px;
     background: #BFD2F8;
-color: #1F2B6C;
-margin: 1rem 0 ;
-cursor: pointer;
+    color: #1F2B6C;
+    margin: 1rem 0;
+    cursor: pointer;
 }
 
-@media (min-width: 450px){
-    .btn{
+@media (min-width: 450px) {
+    .btn {
         width: 21%;
     }
 }
-@media (min-width: 768px){
-    .btn{
+
+@media (min-width: 768px) {
+    .btn {
         width: 26%;
     }
 }
-@media (min-width: 992px){
-    .btn{
+
+@media (min-width: 992px) {
+    .btn {
         width: 22%;
     }
 }
 
-@media (min-width: 768px){
-   
-    .input{
+@media (min-width: 768px) {
+
+    .input {
         background-color: #1F2B6C;
         color: #fff;
         position: relative;
@@ -180,88 +211,103 @@ cursor: pointer;
         margin-top: 2rem;
         padding: .4rem .3rem;
     }
-    .input::placeholder{
+
+    .input::placeholder {
         color: #fff;
         font-weight: 100;
     }
-    .input:focus, .input:active{
+
+    .input:focus,
+    .input:active {
         outline: 0;
     }
 
-    .search{
+    .search {
         position: absolute;
         margin-top: 2.5rem;
-      right: 66px;
-       width: 2%;
+        right: 66px;
+        width: 2%;
     }
-    .searching{
 
-        display:flex ;
-    }
-}
-@media (min-width: 990px){
-    .search{
-        right: 82px;  
+    .searching {
+
+        display: flex;
     }
 }
 
+@media (min-width: 990px) {
+    .search {
+        right: 82px;
+    }
+}
 
-.navigation{
+
+.navigation {
     display: none;
 }
-@media (min-width: 768px){
-    .blog-small{
+
+@media (min-width: 768px) {
+    .blog-small {
         margin-top: 1rem;
         width: 26vw;
         padding: .5rem;
         border: 1px solid #e6e9ef;
 
-        
+
     }
 
-   
-    .small-content{
+
+    .small-content {
         display: flex;
         gap: 10px;
     }
-    .small-contents{
-        margin: .6rem 0 ;
+
+    .small-contents {
+        margin: .6rem 0;
     }
-    .small-img{
+
+    .small-img {
         flex: 1 0 25%;
     }
-    .small-content-para{
+
+    .small-content-para {
         font-size: .8rem;
     }
-    .small-p{
+
+    .small-p {
         font-size: .9rem;
         margin-bottom: .2rem;
     }
-    .categories{
+
+    .categories {
         display: flex;
         justify-content: space-between;
         width: 80%;
         margin: .5rem auto;
     }
-    .arrows{
+
+    .arrows {
         display: flex;
         justify-content: space-between;
         align-items: center;
-        width:120px;
+        width: 120px;
     }
-    .right{
+
+    .right {
         width: 100px;
 
     }
-    .navigation{
+
+    .navigation {
         display: flex;
         width: 60vw;
-       
+
         justify-content: space-between;
 
     }
-    .foot-header{
-        
+
+    .foot-header {
+
         display: flex;
         flex-direction: column;
         justify-content: center;
@@ -269,43 +315,48 @@ cursor: pointer;
     }
 
 }
-   
 
 
-.foot{
+
+.foot {
     margin-top: 4rem;
     width: 80vw;
 
 }
-a{
+
+a {
     text-decoration: none;
 }
-.foo{
+
+.foo {
     width: 70vw;
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
 
-.foo img{
+.foo img {
     width: 30%;
 }
-.foo-1{
+
+.foo-1 {
     background: #BFD2F8;
-    padding:2rem 1.5rem ;
-    display: flex  ;
+    padding: 2rem 1.5rem;
+    display: flex;
     flex-direction: column;
     color: #1F2B6C;
 }
-.foo-2{
-    display: flex  ;
+
+.foo-2 {
+    display: flex;
     flex-direction: column;
     background: #1F2B6C;
-    padding: 2rem 1.5rem ;
+    padding: 2rem 1.5rem;
     color: #BFD2F8;
 }
-@media (max-width: 550px){
-    .foot{
+
+@media (max-width: 550px) {
+    .foot {
         margin: 4rem auto;
         width: 100%;
         display: flex;
@@ -313,35 +364,39 @@ a{
         align-items: center;
         text-align: center;
 
-    
+
     }
-    .foo{
-margin: 0 auto;
+
+    .foo {
+        margin: 0 auto;
         display: flex;
         flex-direction: column;
-    
+
         justify-content: space-between;
         align-items: center;
     }
-    .foo img{
-        width:10%;
+
+    .foo img {
+        width: 10%;
     }
-    .foo-1{
+
+    .foo-1 {
         background: #BFD2F8;
-        padding:1.2rem;
-        display: flex  ;
+        padding: 1.2rem;
+        display: flex;
         flex-direction: column;
         color: #1F2B6C;
         width: 100%;
         margin: 1rem 0;
     }
-    .foo-2{
-        display: flex  ;
+
+    .foo-2 {
+        display: flex;
         flex-direction: column;
         background: #1F2B6C;
-        padding: 1.2rem  ;
+        padding: 1.2rem;
         color: #BFD2F8;
         width: 100%;
     }
-     
+
 }
