--- a/css/singlenews.css
+++ b/css/singlenews.css
@@ -1,6 +1,8 @@
-@import url('https://fonts.googleapis.com/css2?family=Yeseva+One&display=swap'); font-family: 'Yeseva One', cursive;
-@import url('https://fonts.googleapis.com/css2?family=Work+Sans:wght@500&display=swap'); font-family: 'Work Sans', sans-serif;
-@import url('https://fonts.googleapis.com/css2?family=Work+Sans:wght@700&display=swap'); font-family: 'Work Sans', sans-serif;
+@import url('https://fonts.googleapis.com/css2?family=Yeseva+One&display=swap'); 
+@import url('https://fonts.googleapis.com/css2?family=Work+Sans:wght@500&display=swap'); 
+@import url('https://fonts.googleapis.com/css2?family=Work+Sans:wght@700&display=swap');
+
+
 *,html {
     margin: 0px;
     padding: 0px;
